<resources>
    <array name="packet_send_fail">Failed to send packet to drone!</array>
    <string name="app_name">Drone Controller</string>
    <string name="connect">Connect</string>
    <string name="throttle">Throttle</string>

    <string name="no_perms">App not granted sufficient permissions!</string>
    <string name="packet_response_fail">Failed to receive response from drone!</string>
    <string name="packet_response_timeout">No response from drone! Timeout!</string>
    <string name="packet_response_corrupted">Response received from drone is corrupted!</string>

    <string name="packet_send_fail">Failed to send packet!</string>
    <string name="wifi_fail_conn">Failed to connect to GreenFlight wifi</string>
    <string name="channel_display_info">Throttle: %d Yaw: %d Pitch: %d Roll: %d</string>
    <string name="voltage_display_info">Voltage: %.2f</string>

    <string name="arm">Arm</string>
    <string name="disarm">Disarm</string>
    <string name="arm_success">Drone armed!</string>
    <string name="disarm_success">Drone disarmed!</string>
    <string name="connect_success">Successfully Connected!</string>
    <string name="throttle_not_low">Throttle must be set to low before drone can Arm!</string>

    <string name="settings">Settings</string>
    <string name="settings_drone_not_disarmed">Drone must be disarmed before entering settings mode!</string>
    <string name="p_value">P-Value</string>
    <string name="i_value">I-Value</string>
    <string name="d_value">D-Value</string>
    <string name="update">Update</string>
    <string name="reset">Reset</string>
    <string name="proportional">Proportional</string>
    <string name="integral">Integral</string>
    <string name="derivative">Derivative</string>
    <string name="pid_query_success">Successfully retrieved PID values from Drone!</string>
    <string name="pid_update_success">Successfully updated PID values to Drone!</string>

    <string name="yaw">Yaw</string>
    <string name="pitch">Pitch</string>
    <string name="roll">Roll</string>
    <string name="error_nothing_selected">Error! No selection!</string>
</resources>
